--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 </head>
 <body>
-    With due respect, <br>
-    $name you are an Asshole!<br>
-    Fuck you
+    Hey $name, this is just a sample email to check working of my python script.
+    Please cooperate.
+    Thanks
 </body>
 </html>
